перевод manual\ru\blender
all exept:
shadows
Lighting-and-Rendering

--- a/manual/ru/blender/Camera.html
+++ b/manual/ru/blender/Camera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Working with Camera - Soft8Soft</title>
+    <title>Verge3D для Blender: Работа с Камерой - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Find out how to create and control Blender cameras to be used with Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Working with Camera / Blender</h1>
+    <h1>Работа с Камерой / Blender</h1>
 
     <p>
-      This page contains the information on how to setup Blender's cameras to be used with Verge3D.
+      Эта страница содержит информацию о том, как настроить камеру в Blender перед её дальнейшим использовании в Verge3D.
     </p>
 
     [contents]
@@ -21,93 +21,93 @@
 
     [anchor:setting_up_in_blender]
 
-    <h2>Setting Up in Blender</h2>
+    <h2>Настройки в Blender</h2>
 
-    <p>Simply add the camera to the scene and assign it as <em> active</em> in the *Scene Properties*:</p>
+    <p>Просто добавьте камеру в сцену и назначте ее <em> активной</em> в *Scene Properties*:</p>
 
     <img src="files/camera-blender/active-camera.jpg" alt="Setting active camera in Verge3D for Blender" class="centered" style="max-width: 309px">
 
-    <p>This camera will be used to render your scene by default, though you can add more cameras and switch between them in runtime using the <a href="manual/ru/puzzles/Camera.html#set_active_camera">set active camera</a> puzzle.</p>
+    <p>Эта камера будет использоваться для рендера вашей сцены по умолчанию. Также можно добавить несколько камер и переключаться между ними во время проигрывания используя <a href="manual/ru/puzzles/Camera.html#set_active_camera">set active camera</a> puzzle.</p>
 
-    <p>Verge3D supports the following camera types:</p>
+    <p>Verge3D поддерживает следующие типы камер:</p>
 
     <ul>
       <li>*Perspective*</li>
-      <li>*Orthgraphic*</li>
+      <li>*Orthographic*</li>
     </ul>
 
     [anchor:camera_settings]
 
-    <h2>Camera Settings</h2>
+    <h2>Настройки Камеры</h2>
 
-    <p>Verge3D supports the following camera settings:</p>
+    <p>Verge3D поддерживает следующие настройки камеры:</p>
 
     <img src="files/camera-blender/camera-settings.jpg" alt="Camera settings in Verge3D for Blender" class="centered" style="max-width: 627px">
 
-    <p>*Type* - camera type, either *Perspective* or *Orthographic*.</p>
+    <p>*Type* - тип камеры, *Perspective* или *Orthographic*.</p>
 
-    <p>*Clip Start* and *Clip End* - camera visibility range.</p>
+    <p>*Clip Start* и *Clip End* - диапазон видимости камеры.</p>
 
-    <p>*Sensor Fit* - how you viewport will react to changing its dimensions (or device orientation).</p>
+    <p>*Sensor Fit* - как окно просмотра будет реагировать на изменения размеров (или ориентации устройства).</p>
 
-    <p>*Controls* - specify what type of controls will be assigned to the camera in Verge3D:</p>
+    <p>*Controls* - указывает какой тип контроля будет приминён к камере в Verge3D:</p>
 
     <ul>
-      <li>*Orbit* - targeted 3D view.</li>
-      <li>*Flying* - free-flight view.</li>
-      <li>*First-Person* - first-person view with familiar character controls.</li>
-      <li>*Disable* - disable any controls. Specify if you're going to move your camera with animations, Puzzles or JavaScript.</li>
+      <li>*Orbit* - вид с камеры перемещаемой вокруг цели.</li>
+      <li>*Flying* - вид с использованием камеры свободного полета.</li>
+      <li>*First-Person* - вид от первого лица с соответствующим управлением.</li>
+      <li>*Disable* - отключает любое управление. Указывается, если камера будет перемещаться с помощью анимации, Puzzles или JavaScript.</li>
     </ul>
 
-    <p>*Allow Panning* - enable/disable camera panning.</p>
+    <p>*Allow Panning* - включает/отключает панорамирование.</p>
 
-    <p>*Rotation Speed* - camera rotation speed factor.</p>
+    <p>*Rotation Speed* - коэффициент скорости вращения камеры.</p>
 
-    <p>*Movement Speed* - camera movement speed factor.</p>
+    <p>*Movement Speed* - коэффициент скорости перемещения камеры.</p>
 
 
     [anchor:orbit_camera_settings]
 
-    <h3>Orbit Camera Settings</h3>
+    <h3>Настройки Камеры типа Orbit</h3>
 
-    <p>*Target Object/Point* - specify pivot point or pivot object which will be used for Orbit camera.</p>
+    <p>*Target Object/Point* - указать точку или объект вращения, который будет использован для камеры типа Orbit .</p>
 
     <p>
-      *Min Dist* and *Max Dist* - distance limits for perspective camera.
+      *Min Dist* и *Max Dist* - пределы расстояния для перспективной камеры.
     </p>
     <p>
-      *Min Zoom* and *Max Zoom* - zoom limits for orthographic camera.
+      *Min Zoom* и *Max Zoom* - пределы увеличения для орфографической камеры.
     </p>
     <p>
-      *Vertical Rotation Limits*: *Min Angle* and *Max Angle* - vertical angle limits.
+      *Vertical Rotation Limits*: *Min Angle* и *Max Angle* - ограничения вертикального угла.
     </p>
     <p>
-      *Horizontal Rotation Limits*: *Min Angle* and *Max Angle* - horizontal angle limits.
+      *Horizontal Rotation Limits*: *Min Angle* и *Max Angle* - ограничения горизонтального угла.
     </p>
 
 
     [anchor:firstperson_camera_settings]
 
-    <h3>First-Person Camera Settings</h3>
+    <h3>Настройки Камеры типа First-Person</h3>
 
-    <p>*Collision Material* - collision material which will be used for the camera.</p>
+    <p>*Collision Material* - материал коллизии, который будет использован для камеры.</p>
 
-    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+    <p>*Gaze Level* - "взгляд" камеры от первого лица (на уровне глаз).</p>
 
-    <p>*Story Height* - story height.</p>
+    <p>*Story Height* - высота сюжета.</p>
 
 
     [anchor:camera_control_with_puzzles]
 
-    <h2>Camera Control with Puzzles</h2>
+    <h2>Управление камерой с помощью Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      Вы можете использовать <a href="manual/ru/puzzles/Camera.html">camera puzzles</a>, чтобы контролировать камеру в реальном времени.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
