--- a/manual/ru/blender/Material-Library.html
+++ b/manual/ru/blender/Material-Library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Using Material Library - Soft8Soft</title>
+    <title>Verge3D для Blender: Использование Библиотеки Материалов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use the material library in Verge3D for Blender."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Using Material Library / Blender</h1>
+    <h1>Использование Библиотеки Материалов / Blender</h1>
 
     <p>
-      Verge3D material library is a collection of ready-to-use materials which you can assign to your Blender models. Below is the description of a recommended workflow on how to install and use these materials efficiently.
+      Библиотека материалов Verge3D, это коллекция готовых к использованию материалов, которые вы можете назначить своей модели в Blender. Ниже, вы можете ознакомиться с процессом установки и эффективным методом использования данных материалов.
     </p>
 
     <img src="files/mat-library-maya/promo.jpg" class="centered" style="max-width: 819px">
@@ -24,59 +24,60 @@
 
     [anchor:Installing]
 
-    <h2>Installing</h2>
+    <h2>Установка</h2>
 
     <p>
-      Material library is available in Soft8Soft store in the form of themed packs, for example:
+      В магазине Soft8Soft доступны библиотеки материалов, они представленны в виде тематических наборов, например:
     </p>
 
     <ul>
       <li>
-        <a href="https://www.soft8soft.com/product/verge3d-blender-essential-material-pack/" target="_blank">Essential Material Pack</a> (Eevee-based).
+        <a href="https://www.soft8soft.com/product/verge3d-blender-essential-material-pack/" target="_blank">Набор Необходимых Материалов</a> (На основе Eevee).
       </li>
       <li>
-        <a href="https://www.soft8soft.com/product/verge3d-for-blender-jewelry-material-pack/" target="_blank">Jewelry Material Pack</a> (Eevee-based).
+        <a href="https://www.soft8soft.com/product/verge3d-for-blender-jewelry-material-pack/" target="_blank">Набор Материалов для Ювелирных Изделий</a> (На основе Eevee).
       </li>
       <li>
-        Automotive Material Pack (Eevee-based, in development).
+        Набор Материалов для Техники (На основе Eevee, в разработке).
       </li>
     </ul>
 
     <p>
-      Simply unzip the archive with a library pack to any folder on your computer. Inside this folder there are *blend* files (one file per material). The textures used in the materials are located in the *material_maps* folder. The folder *environments* contains 3 variants of HDR images that you can use for the environment (each variant comes in 3 resolutions: 1k, 2k and 4k).
+      Просто распакуйте архив с библиотекой материалов в любую папку на вашем компьютере. Внутри распакованной папки вы найдете несколько файлов расширения *blend* (по одному на каждый материал). Текстуры используемые в материалах расположены в папке с названием *material_maps*. Папка *environments* содержит три варианта HDR изображений, которые вы можете использовать для окружения (каждый вариант представлен в разрешении: 1k, 2k и 4k).
     </p>
 
 
     [anchor:Adding_Materials_to_Project]
 
-    <h2>Adding Materials to Project</h2>
+    <h2>Добавление Материалов в Проект
+    </h2>
 
     <p>
-    In order to use a library material in a project, invoke the *File / Append* dialog.
+    Чтобы использовать библиотеки материалов в проекте, вызовите диалоговое окно *File / Append*.
     </p>
 
     <img src="files/mat-library-blender/append-material.jpg" class="centered" style="max-width: 835px">
 
     <p>
-    Then navigate to the library folder and click once on the *blend* file with the material you want to add.
+    Затем перейдите в папку библиотеки и один раз нажмите на файл *blend* с материалом, который вы хотите добавить.
     </p>
 
     <img src="files/mat-library-blender/append-material2.jpg" class="centered" style="max-width: 835px">
 
     <p>
-    Click once on the *Material* folder...
+    Нажмите один раз на папку *Material*...
     </p>
 
     <img src="files/mat-library-blender/append-material3.jpg" class="centered" style="max-width: 835px">
 
     <p>
-    ...select the material and click the *Append from Library* button.
+    ...выберите материал и нажмите кнопку *Append from Library*.
     </p>
 
     <img src="files/mat-library-blender/append-material4.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    Once a material is appended, you should be able to assign it to a model. Select a model, go to the *Material* tab, click on the small button near the material name (or near the *New* button is there is no material assigned) and select the appended material from the list.
+    Как только материал будет добавлен, у вас появится возможность назначить его для своей модели. Выберите модель, перейдите во вкладку *Material*, нажмите на маленькую кнопку рядом с названием материала (или рядом с кнопкой *New*, если у модели нет назначенного материала) и выберите из списка добавленный материал.
     </p>
 
     <img src="files/mat-library-blender/assign-material.jpg" class="centered" style="max-width: 835px">
@@ -85,91 +86,91 @@
 
     [anchor:Setting_up_the_Environment]
 
-    <h2>Setting up the Environment</h2>
+    <h2>Настройка Окружения</h2>
 
     <p>
-    Eevee-based materials require the environment to be set up, otherwise the materials will look dark and non-reflective. The environment is already set up in Verge3D's default cube project which you can use as a basis for your own app. Alternatively, you can configure the environment from scratch as shown in this <a href="https://www.youtube.com/watch?v=symQy5gEHdY" target="_blank">video tutorial</a>. You can use either of HDR textures in the *environments* folder of a material pack for this purpose.
+    Материалы сделанные под движок Eevee нуждаются в настроенном окружении, иначе они будут выглядеть темно из-за отсутствия отражений. В проекте создаваемом в Verge3D по умолчанию уже настроено окружение, которое вы можете использовать для своего приложения. Кроме того, вы можете настроить окружающую среду с нуля как показано в этом <a href="https://www.youtube.com/watch?v=symQy5gEHdY" target="_blank">видео уроке</a>. Для этой цели вы можете использовать любую из HDR текстур, находящихся в пакете материалов в папке *environments*.
     </p>
 
 
 
     [anchor:UV_Mapping]
 
-    <h2>UV Mapping</h2>
+    <h2>Развёртка</h2>
 
     <p>
-    Most materials in the library require models to be UV-mapped. Consider unwrapping your models for best results.
+    Большинство материалов библиотеки требуют, чтобы у моделей была развёртка. Подумайте о том, чтобы развернуть свои модели для достижения наилучшего результата.
     </p>
 
 
 
     [anchor:Configure_Your_Materials]
 
-    <h2>Configure Your Materials</h2>
+    <h2>Настройка Ваших Материалов</h2>
 
     <p>
-    Most of the shaders offer sets of inputs by tweaking which you can create a unique material suitable for your needs.
+    Большинство шейдеров предлагают наборы входных данных, путем настройки которых вы можете создать уникальный материал, подходящий под ваши нужды.
     </p>
 
     <img src="files/mat-library-blender/material-settings.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    Besides that, there are special inputs for easy connection of baked normal and AO maps.
+    Кроме того, в материале имеются специальные входы для удобного подключения карты нормалей и АО.
     </p>
 
 
 
     [anchor:Image_Resolution]
 
-    <h2>Image Resolution</h2>
+    <h2>Разрешение Изображения</h2>
 
     <p>
-    Some materials may use high-res textures (up to 8k) which may affect the loading speed and performance. Consider re-scaling the images if your application does not require such level of detail.
+    Некоторые материалы используют текстуры высокого разрешения (до 8k), которые могут существенно повлиять на скорость загрузки и производительность. Если необходимости в высоком разрешении текстур в вашем проекте нет, рассмотрите возможность ужать изображения.
     </p>
 
 
 
     [anchor:Relocating_Textures_to_App_Folder]
 
-    <h2>Relocating Textures to App Folder</h2>
+    <h2>Перемещение Текстур в Папку Приложения</h2>
 
     <p>
-    For the sake of integrity of your application (which is important if you're transferring your project sources to a third party), you can save the textures used by appended materials in the app folder as described below.
+    Для обеспечения целостности вашего приложения (что важно, если вы передаете исходные данные проекта третьим лицам), можно сохранить текстуры, используемые добавленными материалами, в папке приложения, как описано ниже.
     </p>
 
     <p>
-    Open the *Image Editor* (or *UV Editor*) in Blender. Select a texture from the drop-down menu, and check its file path.
+    Откройте *Image Editor* (или *UV Editor*) в Blender. Выберите текстуру из выпадающего списка и проверьте её путь к файлу.
     </p>
 
     <img src="files/mat-library-blender/texture-file-paths.jpg" class="centered" style="max-width: 909px">
 
     <p>
-    If it appears that the texture is referenced from the material library folder, use the menu *Image / Save As* to re-save it to your application folder.
+    Если окажется, что путь к текстуре указан из папки библиотеки материалов, используйте меню *Image / Save As* чтобы сохранить её в папке приложения.
     </p>
 
     <img src="files/mat-library-blender/texture-file-paths2.jpg" class="centered" style="max-width: 909px">
 
     <p>
-    Search for other material library textures and repeat this operation until all textures are relocated.
+    Найдите другие текстуры библиотеки материалов и повторяйте эту операцию до тех пор, пока все текстуры не будут перемещены.
     </p>
 
     <p>
-    You can check the integrity of your application by moving its folder to another location in your file system. Open the *blend* file and invoke *File / External Data / Report Missing Files*.
+    Вы можете проверить целостность вашего приложения, переместив его папку в другое место в вашей файловой системе. Откройте *blend* файл и вызовите диалоговое окно *File / External Data / Report Missing Files*.
     </p>
 
     <img src="files/mat-library-blender/texture-file-paths3.jpg" class="centered" style="max-width: 835px">
 
     <p>
-    If any of the textures used in the *blend* file are missing, a yellow splash warning will be shown at the bottom.
+    Если какие-то текстуры, используемые в *blend* файле утеряны, внизу экрана появится соответствующее жёлтое предупреждение.
     </p>
 
     <img src="files/mat-library-blender/texture-file-paths4.jpg" class="centered" style="max-width: 1000px">
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
    </article></body>
