--- a/manual/ru/blender/Material-System.html
+++ b/manual/ru/blender/Material-System.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Material System Overview - Soft8Soft</title>
+    <title>Verge3D для Blender: Обзор системы материалов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn what kinds of Blender materials are supported in Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Material System Overview / Blender</h1>
+    <h1>Обзор системы материалов / Blender</h1>
 
     <p>
-    Verge3D supports the following types of materials:
+      Verge3D поддерживает следующие типы материалов:
     </p>
 
     [contents]
@@ -21,26 +21,26 @@
 
     [anchor:Eevee]
 
-    <h2>Eevee Materials</h2>
+    <h2>Eevee Материалы</h2>
 
     <p>
-    Eevee is Blender's real-time renderer which we recommend to use with Verge3D.
+      Eevee это движок для рендеринга в реальном времени, который мы рекомендуем использовать с Verge 3D.
     </p>
 
     <img src="files/material-system-blender/eevee-material.jpg">
 
     <p>
-    See the detailed information on supported Eevee nodes in this <a href="manual/ru/blender/Shader-Nodes-Reference.html">reference</a>.
+      Вы можете ознакомиться более подробно с нодами, которые поддерживает Eevee, пройдя по следующей <a href="manual/ru/blender/Shader-Nodes-Reference.html">ссылке</a>.
     </p>
 
 
 
     [anchor:Cycles]
 
-    <h2>Cycles Materials</h2>
+    <h2>Cycles Материалы</h2>
 
     <p>
-    Cycles is Blender's raytracing renderer and can be recreated in real-time rendering engines such as Verge3D only approximately. Most Cycles nodes are interchangeable with Eevee's, so you can transfer your existing Cycles-based assets online without much hurdle.
+      Cycles это движок рендеринга с поддержкой трассировки лучей в Blender, он может быть воссоздан на движке рендеринга в реальном времени Verge3D только приблизительно. Большинство нод Cycles взаимозаменяемы нодами Eevee, поэтому вы можете трансформировать существующие ассеты, основанные на Cycles, без особых препятствий.
     </p>
 
     <img src="files/material-system-blender/cycles.jpg">
@@ -49,32 +49,32 @@
 
     [anchor:glTF_compliant_PBR]
 
-    <h2>glTF-compliant PBR Materials</h2>
+    <h2>PBR Материалы совместимые с форматом glTF</h2>
 
     <p>
-    These materials follow <a href="https://www.khronos.org/news/press/khronos-releases-gltf-2.0-specification" target="_blank">glTF 2.0 standard</a> for physically based materials (PBR). According to this standard, material information is encoded in a set of textures: base color, occlusion-roughness-metallic packed in R, G and B channels, respectively.
+      Данные материалы соответствуют <a href="https://www.khronos.org/news/press/khronos-releases-gltf-2.0-specification" target="_blank">glTF 2.0 стандарту</a> для физически корректных материалов (PBR). Согласно этому стандарту, информация о материале закодирована в наборе текстур: base color, occlusion-roughness-metallic упакованные в R, G и B каналы, соответственно.
     </p>
 
     <img src="files/material-system-blender/gltf-pbr.jpg">
 
     <p>
-      In Verge3D, glTF-compliant PBR materials are represented using the <b>Principled BSDF</b> shader node to inputs of which PBR textures are connected.
+      В Verge3D, PBR материалы совместимые с форматом glTF отображаются с помощью шейдерной ноды <b>Principled BSDF</b>, ко входам которой, подключаются PBR текстуры.
     </p>
 
     <img src="files/physical-material-blender/phmat_01.png" class="centered" style="max-width: 905px;">
 
     <p>
-      In addition, although this is not part of the glTF 2.0 standard, you can set up world nodes to serve as environment.
+      Кроме того, вы можете настроить ноды world в качестве окружающей среды, хотя это не является glTF 2.0 стандартом.
     </p>
 
     <p>
-      Check out the <a href="manual/ru/blender/GLTF-Materials.html">glTF Materials</a> chapter for more information on how to set up glTF-compliant PBR materials.
+      Ознакомьтесь с главой <a href="manual/ru/blender/GLTF-Materials.html">glTF Materials</a> для большей информации как настроить PBR материалы совместимые с форматом glTF.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
