--- a/manual/ru/blender/Morphing.html
+++ b/manual/ru/blender/Morphing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Shape Keys (aka Morphing) - Soft8Soft</title>
+    <title>Verge3D для Blender: Ключи формы (также известные как морфинг) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to setup and use shape keys (aka morphing) in Verge3D for Blender."/>
     <base href="../../../" />
@@ -10,33 +10,28 @@
   </head>
   <body><article>
 
-    <h1>Shape Keys (aka Morphing) / Blender</h1>
+    <h1>Ключи формы (также известные как морфинг) / Blender</h1>
 
-    <p>Shape Keys (called Morphing in Verge3D) is a feature which allows you to modify mesh objects in real-time. The most common use case for this feature is creating parametric objects which can change their dimensions, shape, thickness, holes, profiles etc.</p>
+    <p>Ключи формы (в Verge3D называются морфинг) это свойство, которое позволяет изменять объект в реальном времени. Наиболее распространенным вариантом использования ключей формы является создание параметрических объектов, у которых могут изменяться размеры, форма, толщина, отверстия, контуры и др.</p>
 
-    <p>See the following demo as an example:</p>
+    <p>Для примера ознакомьтесь с видео приведенным ниже:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:setting_up]
 
-    <h2>Setting Up</h2>
+    <h2>Настройка</h2>
 
     <p>
-        Blender shape keys are exported by default. Only *Relative* shape keys
-        are supported. Please notice that due to hardware constraints, the total
-        number of active shape keys is limited. Most of the time it's 5 shape
-        keys for skinned objects and 6 for others (the "Basis" key doesn't count
-        towards the limit). See <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">this topic</a>
-        for more information about calculating the limit in more complex cases.<br/><br/>
+        Ключи формы в Blender экспортируются по умолчанию. В Verge3D поддерживаются только ключи формы типа *Relative*. Обращаем ваше внимание, что из-за технических ограничений максимальное количество активных ключей формы ограничено. В большинстве случаев, ограничение количества ключей для объектов составит 6 и 5 для объектов со скиннингом (ключ "Basis" не учитывается при подсчёте). Ознакомьтесь с <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">данной темой</a>
+        для получения информации о подсчёте ограничений в более сложных ситуациях.<br/><br/>
 
-        During rendering, the engine selects 6 shape keys with largest
-        influences ignoring all excessive shape keys.
+        Во время рендера, движок выбирает 6 ключей формы с самым большим влиянием и игнорирует остальные.
     </p>
 
     <img src="files/morphing-blender/example.jpg" alt="Morphing in Verge3D for Blender" class="centered" style="max-width: 819px">
@@ -44,28 +39,28 @@
 
     [anchor:animation]
 
-    <h2>Animation</h2>
+    <h2>Анимация</h2>
 
-    <p>To animate shape keys in Verge3D, add keyframes for their <strong>Value</strong> parameter. The animation of shape keys works exactly the same as for any other animation parameter. You can run you playback at application start or use <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> for that purpose.</p>
+    <p>Чтобы анимировать ключи формы в Verge3D, добавьте ключевые кадры для их параметра <strong>Value</strong>. Анимация ключей формы работает точно также, как и анимация других параметров. Вы можете воспроизводить анимацию при запуске приложения, а можете использовать для этой задачи <a href="manual/ru/puzzles/Animation.html">animation puzzles</a>.</p>
 
 
     [anchor:controlling_with_puzzles]
 
-    <h2>Controlling via Puzzles</h2>
+    <h2>Управление с помощью Puzzles</h2>
 
-    <p>To manipulate your shape keys in real-time there are two puzzles: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> and <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>.</p>
+    <p>Чтобы управлять ключами формы в реальном времени существуют два пазла: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>.</p>
 
 
     [anchor:see_also]
 
-    <h2>See Also</h2>
+    <h2>Дополнительная Информация</h2>
 
-    <p>You may also check out the following <a href="https://youtu.be/Y-VUwoDL0qo" target="_blank">video</a> explaining how to work with parametric objects in Verge3D.</a>
+    <p>Вы также можете ознакомиться с данным <a href="https://youtu.be/Y-VUwoDL0qo" target="_blank">видео</a>, в котором объясняется, как работают параметрические объекты в Verge3D.</a>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
