--- a/manual/ru/blender/Animation.html
+++ b/manual/ru/blender/Animation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Animation - Soft8Soft</title>
+    <title>Verge3D для Blender: Анимация - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page contains the information about Blender's animation types supported in Verge3D."/>
     <base href="../../../" />
@@ -11,10 +11,10 @@
 
   <body><article>
 
-    <h1>Animation / Blender</h1>
+    <h1>Анимация / Blender</h1>
 
     <p>
-    This page contains the information about Blender's animation types which can be used with Verge3D, as well as supported playback options and means to control the animation interactively.
+    Эта страница содержит информацию о типах анимации Blender, которые могут быть использованы в Verge 3D, а также о поддерживаемых параметрах воспроизведения и средствах интерактивного управления анимацией.
     </p>
 
 
@@ -24,21 +24,21 @@
 
     [anchor:Setting_Up_Blender]
 
-    <h2>Setting Up in Blender</h2>
+    <h2>Настройки в Blender</h2>
 
 
     [anchor:Whole_Object_Animation]
 
-    <h3>Whole-Object Animation</h3>
+    <h3>Объектная Анимация</h3>
 
     <p>
-    Animation keyframes can be added in standard ways in Blender, by using Object > Animation > Insert Keyframe... menu (or with the shortcut *I*), selecting another frame on the timeline, moving/rotating/scaling an object to a new position and adding a new animation keyframe for this position.
+    Ключевые кадры анимации могут быть добавлены в Blender стандартным путём: используя Object > Animation > Insert Keyframe... menu (или при нажатии горячей клавиши *I*), после чего, на временной шкале выбирается другой кадр, объект перемещается/вращается/масштабируется в новое положение и добавляется новый ключевой кадр для этой позиции.
     </p>
 
     <img src="files/animation-blender/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for Blender" class="centered" style="max-width: 1000px">
 
 
-    <p>See also the following tutorial:</p>
+    <p>Ознакомтесь со следующим обучающим видео:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/VkjEfSmI2xM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -46,10 +46,10 @@
 
     [anchor:Skeletal_Animation]
 
-    <h3>Skeletal Animation</h3>
+    <h3>Скелетная Анимация</h3>
 
     <p>
-    An object can be skinned in Blender with an <a href="https://docs.blender.org/manual/ru/latest/animation/armatures/index.html" target="_blank">Armature</a> object. Verge3D support maximum 4 weights per bone (4 most influential weights are selected, others are ignored). The armature's bones can be animated in *Pose Mode* (Ctrl-Tab), by using Pose > Animation > Insert Keyframe... menu (or with the shortcut *I*), selecting another frame on the timeline, moving/rotating/scaling a bone to a new position and adding a new animation keyframe for this position.
+    Прискиннивание объекта в Blender выполняется с использованием <a href="https://docs.blender.org/manual/ru/latest/animation/armatures/index.html" target="_blank">Armature(каркас)</a>. Verge3D поддерживает максимум 4 веса на одну кость (взаимодействовать с костью будут только 4 веса с самым большим значением влияния, остальные будут проигнорированы). Кости каркаса могут быть заанимированы в *Pose Mode* (Ctrl-Tab), используя Pose > Animation > Insert Keyframe... menu (или горячая клавиша *I*),  после чего, на временной шкале выбирается другой кадр, кость перемещается/вращается/масштабируется и добавляется новый ключевой кадр для этой позиции.
     </p>
 
     <img src="files/animation-blender/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
@@ -57,16 +57,16 @@
 
     [anchor:Shape_Key_Animation]
 
-    <h3>Shape Key Animation</h3>
+    <h3>Ключи формы или морфинг анимация</h3>
 
     <p>
-    You can add <a href="manual/ru/blender/Morphing.html">shape keys</a> to an object in standard ways in Blender (click on the link for more details).
+    Вы можете добавить <a href="manual/ru/blender/Morphing.html">ключи формы</a> к объекту в Blender стандартным путём (пройдите по ссылке для более подробной информации).
     </p>
 
     <img src="files/animation-blender/shape-key-animation.jpg" alt="Shape key animation in Verge3D for Blender" class="centered" style="max-width: 889px">
 
     <p>
-    The values for shape keys can be animated in Blender, by right-clicking on a value field and selecting *Insert Keyframe* (or by hovering the cursor over it and using the shortcut *I*), selecting another frame on the timeline, setting a new value in the field and adding a new animation keyframe for this value.
+    Значения ключей формы могут быть заанимированы в Blender нажатием ПКМ на Value и выборе *Insert Keyframe* (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, в поле ввода устанавливается новое значение Value и добавляется новый анимационный ключ для этого значения.
     </p>
 
     <img src="files/animation-blender/shape-key-animation-insert-keyframe.jpg" alt="Inserting keyframes for shape key animation in Verge3D for Blender" class="centered" style="max-width: 199px">
@@ -74,16 +74,16 @@
 
     [anchor:Material_Animation]
 
-    <h3>Material Animation</h3>
+    <h3>Анимация Материалов</h3>
 
     <p>
-    Unlike with Blender, you can only animate a material parameter by first connecting it to a *Value* or *RGB* node.
+    В отличие от Blender, в Verge 3D можно заанимировать только определенный параметр материала, подключив к нему ноду *Value* или *RGB*. 
     </p>
 
     <img src="files/animation-blender/node-material-animation.jpg" alt="Node material animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
 
     <p>
-    The values or colors specified by these nodes can be animated in Blender, by right-clicking on a node and selecting *Insert Keyframe* (or by hovering the cursor over it and using the shortcut *I*), selecting another frame on the timeline, setting a new value or color and adding a new animation keyframe for it.
+    Значения цветов заданные этими нодами могут быть заанимированы в Blender нажатием ПКМ на соответсвующую ноду (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, устанавливается новое значение или цвет которым добавляется анимационный ключ.
     </p>
 
     <img src="files/animation-blender/node-material-animation-insert-keyframes.jpg" alt="Inserting keyframes for node material animation in Verge3D for Blender" class="centered" style="max-width: 200px">
@@ -91,10 +91,10 @@
 
     [anchor:Procedural_Animation]
 
-    <h3>Procedural Animation</h3>
+    <h3>Процедурная Анимация</h3>
 
     <p>
-    Instead of playing back some animation which was pre-made in Blender, you can use Puzzles or JavaScript to modify coordinates or some other parameters with time. Particulurly, the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (based on the Tween.js library) is a convenient way to create your own animation on the fly.
+    Вместо того, чтобы проигрывать анимацию созданную в Blender, вы можете использовать Puzzles или JavaScript чтобы изменить координаты или другие параметры. В особенности <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (основанный на Tween.js library) является удобным способом создания собственной анимации на лету.
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
@@ -103,38 +103,38 @@
 
     [anchor:Playback_Options]
 
-    <h2>Playback Options</h2>
+    <h2>Параметры Воспроизведения</h2>
 
 
     [anchor:Verge3D_Per_Object_Settings]
 
-    <h3>Verge3D Per-Object Settings</h3>
+    <h3>Настройки Verge3D для каждого объекта</h3>
 
     <p>
-    Each object in Blender is assigned with Verge3D settings, including the settings for animation playback.
+    Каждому объекту в Blender назначаются настройки Verge 3D, включая настройки воспроизведения анимации.
     </p>
 
     <img src="files/animation-blender/blender-verge3d-animation-settings.jpg" alt="Verge3D for Blender animation settings panel" class="centered" style="max-width: 403px">
 
     <p>
-    Animation settings:
+    Настройки анимации:
     </p>
     <p>
     <ul>
     <li>
-    *Auto Start* - whether this object's animation will start after the scene is loaded.
+    *Auto Start* - начнется ли анимация этого объекта, как только сцена загрузится.
     </li>
     <li>
-    *Loop Mode* - playback mode: *Repeat* - plays from the start to the end and repeats, *Once* - plays one time and stops, *Ping Pong* - plays from the start to the end and then in reverse.
+    *Loop Mode* - режимы воспроизведения: *Repeat* - проигрывает анимацию от начала до конца, затем повторяет, *Once* - проигрывает один раз, затем останавливается, *Ping Pong* - проигрывает от начала до конца, затем воспроизводит анимацию в обратную сторону.
     </li>
     <li>
-    *Repeat Infinitely* - whether this object's animation will be played all over again. Valid only for *Repeat* and *Ping Pong* modes.
+    *Repeat Infinitely* - если необходимо, чтобы анимация объекта проигрывалась бесконечно. Действительно только для режимов *Repeat* и *Ping Pong*.
     </li>
     <li>
-    *Repeat Count* - how many times the animation will be played. Valid only for *Repeat* and *Ping Pong* modes if *Repeat Infinitely* is disabled.
+    *Repeat Count* - сколько раз будет проиграна анимация. Действительно только для *Repeat* и *Ping Pong* если режим *Repeat Infinitely* отключен.
     </li>
     <li>
-    *Offset* - how many frames will be skipped before the animation starts.
+    *Offset* - какое количество кадров должно быть пропущено перед началом воспроизведения анимации.
     </li>
     </ul>
     </p>
@@ -142,25 +142,25 @@
 
     [anchor:Interpolation]
 
-    <h3>Interpolation</h3>
+    <h3>Интерполяция</h3>
 
     <p>
-    The menu for switching keyframe interpolation is invoked with right click on the timeline window in Blender (shortcut *T*).
+    Меню переключения интерполяции между ключевыми кадрами вызывается нажатием ПКМ в окне временной шкалы в Blender (горячая клавиша *T*).
     </p>
 
     <img src="files/animation-blender/interpolation.jpg" alt="Keyframe interpolation in Verge3D for Blender" class="centered" style="max-width: 1000px">
 
     <p>
-    All interpolation modes available in Blender for animation keyframes are supported by Verge3D.
+    Verge 3D поддерживет все режимы интерполяции доступные в Blender.
     </p>
 
 
     [anchor:Frame_Rate]
 
-    <h3>Frame Rate</h3>
+    <h3>Частота смены кадров</h3>
 
     <p>
-    The frame rate value (default - 24 fps) which affect the playback speed can be changed in the *Output Properties* tab.
+    Значение частоты смены кадров (по умолчанию - 24 fps) влияет на скорость воспроизведения и может быть изменено во вкладке *Output Properties*.
     </p>
 
     <img src="files/animation-blender/frame-rate.jpg" alt="Frame rate selector in Verge3D for Blender" class="centered" style="max-width: 389px">
@@ -168,21 +168,21 @@
 
     [anchor:Animation_Control_with_Puzzles]
 
-    <h2>Animation Control with Puzzles</h2>
+    <h2>Контроль Анимации с помощью Puzzles</h2>
 
     <p>
-    You can use <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> for playing back a pre-made animation (click on the link for more details).
+    Вы можете использовать <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> для воспроизведения предварительно созданной анимации (пройдите по ссылке для более подробной информации).
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
 
     <p>
-    Animation can also be implemented with other visual scripting blocks - see <a href="manual/ru/puzzles/Camera.html">Camera</a> and <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
+    Анимация также может быть реализована с использованием других блоков визуальных сценариев - смотрите <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
