--- a/manual/ru/blender/GLTF-Materials.html
+++ b/manual/ru/blender/GLTF-Materials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: glTF Materials (glTF 2.0-compliant PBR) - Soft8Soft</title>
+    <title>Verge3D для Blender: glTF материалы (PBR совместимый с glTF 2.0) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to setup glTF-compliant PBR materials in Blender to be used with Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>glTF Materials (glTF 2.0-compliant PBR) / Blender</h1>
+    <h1>glTF Материалы (PBR совместимый glTF 2.0) / Blender</h1>
 
     <p>
-    If your content needs to be compatible with glTF 2.0 standard <a href="manual/ru/introduction/FAQ.html#gltf_materials">for some reason</a>, you can use simple material setup based on the *Principled BSDF* shader node.
+    Если вам <a href="manual/ru/introduction/FAQ.html#gltf_materials">по какой-то причине</a> требуется, чтобы материал был совместим с форматом glTF 2.0, вы можете использовать простые настройки на основе шейдерной ноды *Principled BSDF*.
     </p>
 
     [contents]
@@ -22,92 +22,92 @@
 
     [anchor:texture_packing]
 
-    <h2>Texture Packing</h2>
+    <h2>Упаковка Текстур</h2>
 
-    <p>The glTF 2.0 standard requires that you pack the PBR components of materials in a single image (aka ORM texture):</p>
+    <p>Стандарты glTF 2.0 требуют, чтобы вы упаковали все компоненты PBR материала в одно изображение (также известное, как ORM текстура):</p>
 
     <ul>
-      <li>Occlusion factor is packed in the R channel. It's also possible to use separate texture for occlusion, but packing allows you to use less textures and thus makes your scene more size-efficient.</li>
-      <li>Roughness factor is packed in the G channel.</li>
-      <li>Metalness (metallic) factor is packed in the B channel.</li>
+      <li>Фактор Occlusion упаковывается в R канал. Также есть возможность упаковать текстуру окклюзии отдельно, но упаковка позволяет использовать меньше текстур и благодаря этому оптимизировать сцену.</li>
+      <li>Фактор Roughness упаковывается в G канал.</li>
+      <li>Фактор Metalness (metallic) упаковывается в B канал.</li>
     </ul>
 
 
     [anchor:setting_up]
 
-    <h2>Setting Up</h2>
+    <h2>Настройки</h2>
 
     <p>
-      Add the *Princlipled BSDF* shader node to your material and enable the *glTF 2.0 compatible* checker located on the *Verge3D Settings* panel.
+      Добавьте шейдерную ноду *Princlipled BSDF* в ваш материал, и в панели настроек *Verge3D Settings* включите функцю *glTF 2.0 compatible*.
     </p>
 
     <img src="files/physical-material-blender/phmat_00.png" class="centered" style="max-width: 661px;">
 
     <p>
-      You can connect texture nodes to the *Princlipled BSDF* node as described below. Note that all textures are optional and any of them can be safely omitted.
+      Вы можете подключить текстурные ноды к *Princlipled BSDF* как описано ниже. Обращаем ваше внимание, что необязательно подключать все текстуры как на изображении, вы можете обойтись только теми, которые необходимы именно в вашем проекте.
     </p>
 
     <img src="files/physical-material-blender/gltf-material-example.jpg" class="centered" style="max-width: 820px;">
 
     <ul>
       <li>
-        Connect an *Image Texture* node to the *Base Color* input of the *Principled BSDF* node. *Color Space* of the texture must be set to *sRGB*.
+        Подключите ноду *Image Texture* во вход *Base Color* ноды *Principled BSDF*. В настройках текстуры *Color Space* должно быть выставлено значение *sRGB*.
       </li>
       <li>
-        Connect *Image Texture* and *Separate RGB* nodes to the *Metallic* and *Roughness* inputs of the *Principled BSDF* node. For optimal loading and rendering of the PBR shader you should pack your occlusion, roughness and metallic textures into R, G and B channels of a single texture respectively. To enable occlusion rendering, the R channel of the occlusion texture should be connected as a mix factor of the black Diffuse shader. The *Color Space* setting of this texture must be set to *Non-Color*.
+        Подключите ноду *Separate RGB* к *Image Texture* и выведете соответствующие цветовые каналы во входы *Metallic* и *Roughness* ноды *Principled BSDF*.  Для оптимальной загрузки рендера PBR шейдера следует упаковать текстуры occlusion, roughness и metallic в R, G и B каналы одной единственной текстуры соответственно. Чтобы корректно настроить отображение окклюзии, R канал текстуры следует подключить как фактор в ноду Mix Shader для смешивания с шейдерной нодой Diffuse черного цвета. В настройках текстуры *Color Space* должно быть выставлено значение *Non-Color*.
       </li>
       <li>
-        Connect a *Normal Map* texture to the *Normal* input of the *Principled BSDF* node and an *Image Texture* node to that *Normal Map* node. The *Color Space* parameter of the texture must be set to *Non-Color*. You can also tune the normal map strength by using the *Strength* option.
+        Подключите ноду *Image Texture* с текстурой нормалей в ноду *Normal Map*, а ноду *Normal Map* во вход *Normal* ноды *Principled BSDF*. В настройках текстуры *Color Space* должно быть выставлено значение *Non-Color*. Также вы можете настроить фактор силы для normal map используя ползунок *Strength*.
       </li>
       <li>
-        Connect an *Image Texture* node to the *Emission* input of the *Principled BSDF* node. *Color Space* of the texture must be set to *sRGB*.
+        Подключите ноду *Image Texture* к *Principled BSDF* используя вход *Emission*. В настройках текстуры *Color Space* должно быть выставлено значение *sRGB*.
       </li>
     </ul>
 
-    <p>If you need to tune your *Base Color* texture, e.g make it darker or mix with some other color, use *Multiply* node as shown on the picture below:</p>
+    <p>Если вам нужно настроить текстуру *Base Color*, например сделать её темнее или смешать с другим цветом, используйте ноду *Multiply* как показано на изображении ниже:</p>
 
     <img src="files/physical-material-blender/gltf-material-color-factor.jpg" class="centered" style="max-width: 844px;">
 
-    <p>You can also use the *Alpha* input to tune your material transparency.</p>
+    <p>Вы также можете использовать вход *Alpha* чтобы настроить прозрачность своего материала.</p>
 
     <p>
-      To see the preview of the *Principled BSDF* shader in the Blender viewport, you can set the display method of the *3D View* to *Rendering* or just preview your scene in Verge3D with the *Sneak Peak* button on the same panel.
+      Чтобы узнать как выглядит *Principled BSDF* в окне просмотра Blender, вы можете переключить режим отображения *3D View* на *Rendering* или открыть сцену в Verge3D с помощью кнопки *Sneak Peak*, расположенной на той же панели.
     </p>
 
 
     [anchor:exporting_substance]
 
-    <h2>Exporting Textures from Substance Painter</h2>
+    <h2>Экспорт Текстур из Substance Painter</h2>
 
-    <p>The models and the baked normal and occlusion maps (if any) can be loaded in Substance Painter via OBJ format.</p>
+    <p>Модели и запеченные карты нормалей и окклюзии (если они есть) могут быть открыты в Substance Painter через формат OBJ.</p>
 
     <img src="files/physical-material-blender/substance_screenshot.jpg" class="centered" style="max-width: 819px;">
 
-    <p>Overall 3 maps are produced in this software in the end: base color/transparency, occlusion/roughness/metallic and normal.</p>
+    <p>На выходе в этой программе создаются три карты:base color/transparency, occlusion/roughness/metallic и normal.</p>
 
     <img src="files/physical-material-blender/pbr_texture_set_preview.jpg" class="centered" style="max-width: 819px;">
 
     <p>
-      To facilitate exporting textures from Substance Painter and to ensure maximum capabilities within the Verge3D engine we recommend using <a href="files/physical-material-blender/Verge3D_for_Blender.spexp" target="_blank">Verge3D export preset</a>. Place this preset file to the *export-presets* folder usually located in the <strong>My Documents\Allegorithmic\Substance Painter\shelf\</strong> directory (create it if does not exist).
+      Для упрощения экспорта текстур из Substance Painter и достижения максимального потенциала при использовании движка Verge3D, мы рекомендуем использовать <a href="files/physical-material-blender/Verge3D_for_Blender.spexp" target="_blank">Verge3D export preset</a>. Поместите этот файл с пресетом в папку *export-presets*, которую можно найти, используя следующий путь <strong>My Documents\Allegorithmic\Substance Painter\shelf\</strong> (если папки нет, создайте её самостоятельно).
     </p>
 
     <img src="files/physical-material-blender/phmat_08.png">
 
     <p>
-      When exporting textures from Substance Painter, choose *Verge3d for Blender* the export dialog window so that all generated textures are compatible with the glTF 2.0 standard Verge3D is based on.
+      При экспорте текстур из Substance Painter, в диалоговом окне эксопрта выберете *Verge3d for Blender*, чтобы он сгенерировал текстуры совместимые с форматом glTF 2.0 standard, на котором основан Verge3D.
     </p>
 
 
     [anchor:export_to_gltf_in_runtime]
 
-    <h2>Export to glTF in Runtime</h2>
+    <h2>Экспортируйте в glTF во время запуска</h2>
 
-    <p>With *export to gltf* puzzle you can export your models or the entire scene in realtime. Then you can download the exported model or upload to the server for permanent storage. See more in the puzzle's <a href="manual/ru/puzzles/Scenes.html#export_to_gltf">reference</a>.</p>
+    <p>С пазлом *export to gltf* вы можете экспортировать свои модели или целую сцену в реальном времени. Затем вы можете скачать экспортированную модель или загрузить на сервер для постоянного хранения. Ознакомьтесь с данным пазлом подробнее по <a href="manual/ru/puzzles/Scenes.html#export_to_gltf">ссылке</a>.</p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
