--- a/manual/ru/blender/Object-Constraints.html
+++ b/manual/ru/blender/Object-Constraints.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Blender: Object Constraints - Soft8Soft</title>
+    <title>Verge3D для Blender: Ограничения Объектов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page contains the information about Blender's object constraints supported in Verge3D."/>
     <base href="../../../" />
@@ -11,10 +11,10 @@
   <body><article>
 
 
-    <h1>Object Constraints / Blender</h1>
+    <h1>Ограничения Объектов / Blender</h1>
 
     <p>
-    This page contains the information about Blender's object <a href="https://docs.blender.org/manual/ru/latest/animation/constraints/index.html" target="_blank">constraints</a> which can be used with Verge3D.
+      Данная страница содержит информацию об <a href="https://docs.blender.org/manual/ru/latest/animation/constraints/index.html" target="_blank">ограничениях</a> объектов в Blender, которые могут быть использованы в Verge3D.
     </p>
 
     [contents]
@@ -22,10 +22,10 @@
 
     [anchor:Constraints_and_Settings]
 
-    <h2>Constraints and Settings</h2>
+    <h2>Ограничения и Настройки</h2>
 
     <p>
-    Below are are listed Blender object constraints that can be used with Verge3D. The parameters supported by Verge3D are overlaid with green color.
+      Ниже перечислены объектные ограничения Blender, которые могут быть использованы в Verge3D. Параметры поддерживаемые Verge3D выделены зеленым цветом.
     </p>
 
 
@@ -34,7 +34,7 @@
     <h3>Copy Location</h3>
 
     <p>
-    This constraint forces the object to which it is applied to have the same location as its target.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такое же местоположение как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-location.jpg" class="centered" style="max-width: 383px">
@@ -46,7 +46,7 @@
     <h3>Copy Rotation</h3>
 
     <p>
-    This constraint forces the object to which it is applied to match the rotation of its target.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такое же вращение как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-rotation.jpg" class="centered" style="max-width: 383px">
@@ -58,7 +58,7 @@
     <h3>Copy Scale</h3>
 
     <p>
-    This constraint forces the object to which it is applied to match the scale of its target.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такой же масштаб как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-scale.jpg" class="centered" style="max-width: 383px">
@@ -70,7 +70,7 @@
     <h3>Copy Transforms</h3>
 
     <p>
-    This constraint forces the object to which it is applied to have the same transforms as its target.
+      Данное ограничение заставляет объект, к которому оно применено, трансформироваться также как и его цель.
     </p>
 
     <img src="files/constraints-blender/copy-transforms.jpg" class="centered" style="max-width: 383px">
@@ -82,7 +82,7 @@
     <h3>Limit Location</h3>
 
     <p>
-    This constraint restricts the amount of allowed translations along each axis, through lower and upper bounds.
+      Данное ограничение контролирует величину разрешённых перемещений вдоль каждой оси посредством минимального и максимального порогового значения.
     </p>
 
     <img src="files/constraints-blender/limit-location.jpg" class="centered" style="max-width: 383px">
@@ -94,7 +94,7 @@
     <h3>Limit Rotation</h3>
 
     <p>
-    This constraint restricts the amount of allowed rotations around each axis, through lower and upper bounds.
+      Данное ограничение контролирует величину разрешённых поворотов вокруг каждой оси посредством минимальных и максимальных пороговых значений.
     </p>
 
     <img src="files/constraints-blender/limit-rotation.jpg" class="centered" style="max-width: 383px">
@@ -106,7 +106,7 @@
     <h3>Limit Scale</h3>
 
     <p>
-    This constraint restricts the amount of allowed scalings along each axis, through lower and upper bounds.
+    Данное ограничение контролирует величину разрешённого масштабирования вдоль каждой оси посредством минимальных и максимальных пороговых значений.
     </p>
 
     <img src="files/constraints-blender/limit-scale.jpg" class="centered" style="max-width: 383px">
@@ -118,7 +118,7 @@
     <h3>Track To</h3>
 
     <p>
-    This constraint applies rotations to its owner, so that it always points a given *To* axis towards its target, with another *Up* axis permanently maintained as much aligned with the global Z axis as possible. Thus you can implement billboarding with this constraint.
+    Данное ограничение поворачивает объект в направлении цели, чтобы он всегда смотрел в сторону оси назначенной для *To*, в то время как другая ось *Up* постоянно поддерживалась максимально параллельно глобальной оси Z. Таким образом, благодаря данному ограничению вы можете реализовать псевдотрёхмерность.
     </p>
 
     <img src="files/constraints-blender/track-to.jpg" class="centered" style="max-width: 383px">
@@ -130,7 +130,7 @@
     <h3>Locked Track</h3>
 
     <p>
-    This constraint works similar to *Track To* constraint, but with a locked axis.
+    Данное ограничение работает как ограничение *Track To*, но с фиксированной осью. 
     </p>
 
     <img src="files/constraints-blender/locked-track.jpg" class="centered" style="max-width: 383px">
@@ -142,7 +142,7 @@
     <h3>Child Of</h3>
 
     <p>
-    This is the constraint version of the standard parent/children relationship between objects.
+    Данное ограничение является вариантом стандартных взаимоотношений родители/дети между объектами.
     </p>
 
     <img src="files/constraints-blender/child-of.jpg" class="centered" style="max-width: 383px">
@@ -154,7 +154,7 @@
     <h3>Floor</h3>
 
     <p>
-    This constraint allows you to use its target as a plane where the owner cannot go.
+    Данное ограничение позовляет использовать цель в качестве плоскости, которую объект не сможет пересечь.
     </p>
 
     <img src="files/constraints-blender/floor.jpg" class="centered" style="max-width: 383px">
@@ -163,21 +163,21 @@
 
     [anchor:Use_with_Puzzles]
 
-    <h2>Use with Puzzles</h2>
+    <h2>Используйте с Пазлами</h2>
 
     <p>
-    All constraints, once assigned in Blender and exported, can be removed, muted or ummuted with a <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">puzzle</a>. Unlike in Blender, a removed/muted constraint does not reset the object - this puzzle just leaves the object with the same transform it had just before removing or muting.
+    Все назначенные в Blender ограничения, после экспортирования могут быть удалены, отключены и включены с помощью <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">пазлов</a>. В отличие от Blender, убранные или отключённые ограничения не сбрасывают положение объекта, данный пазл оставит объект в том же положении, в котором он был до удаления или отключения ограничений.
     </p>
 
     <p>
-    In addition, *Limit/Copy* *Location/Rotation/Scale* constraints can be assigned at runtime with <a href="manual/ru/puzzles/Animation.html#limit_transform">puzzles</a>.
+    Кроме того, ограничения *Limit/Copy* *Location/Rotation/Scale* могут быть назначены во время запуска с данным <a href="manual/ru/puzzles/Animation.html#limit_transform">пазлами</a>.
     </p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
